# task-7-web-report-of-monaco-2018-racing

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: app.py  controller.py  routes.py
src/task_Barvynska/: __init__.py  drivers.py  entry_point.py  files.py  format_file.py
src/task_Barvynska.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/templates/: driver_info.html  drivers.html  report.html
tests/: conftest.py  constants.py  test_controller.py  test_drivers.py  test_entry_point.py  test_files.py  test_format_file.py  test_routes.py
